# nexus-ai

./: .gitignore  CLAUDE.md  README.md  create-standalone-app.sh  start.sh
backend/: requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: backup.py  chat.py  documents.py  memory.py  projects.py  settings.py  webcapture.py  writing.py
backend/app/core/: config.py  database.py
backend/app/models/: database.py  schemas.py
backend/app/services/: agent_service.py  backup_service.py  chat_service.py  document_processor.py  encryption_service.py  file_watcher.py  memory_service.py  model_router.py  ollama_service.py  project_service.py  rag_service.py  writing_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: APIPlayground.tsx  AgentMode.tsx  AnalyticsDashboard.tsx  AutoSummarization.tsx  ChatExport.tsx  CommandPalette.tsx  ContextIndicator.tsx  ConversationBranching.tsx  DocumentAnnotations.tsx  DraggableList.tsx  ErrorBoundary.tsx  FileUploadZone.tsx  GlobalSearch.tsx  KeyboardShortcuts.tsx  KnowledgeGraph.tsx  MarkdownRenderer.tsx  MessageActions.tsx  MobileLayout.tsx  MultiModelChat.tsx  OfflineMode.tsx  OnboardingFlow.tsx  PromptTemplates.tsx  SecuritySettings.tsx  SemanticSearch.tsx  SplitView.tsx  StreamingIndicator.tsx  SystemPrompts.tsx  ThemeCustomizer.tsx  VoiceInput.tsx  WebPageImport.tsx  index.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
(+8 files in other folders)
